--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <main>
-        <!-- <div class="bigbox" id="bigbox">
+        <div class="bigbox" id="bigbox">
             <div class="menu" id="menu">
                 <div class="start">
                     <div class="logo"> <img src="./images/rock logo.png" alt=""></div>
@@ -21,8 +21,9 @@
                         <button onclick="Start()">Start</button>
                     </div>
                 </div>
+                <h2>Important! <em>Best of 5 will be Considered</em></h2>
             </div>
-        </div> -->
+        </div>
 
         <h1>Rock Paper Scissor</h1>
         <div class="box">
@@ -52,18 +53,20 @@
                     <div class="ur">
                         <h2 style="text-align: center;">User</h2>
                         <div>
-                            <input type="number" id="ufr" value="0">
+                            <input type="number" id="ufr" value="0" readonly>
                         </div>
                     </div>
                     <div class="cr">
                         <h2 style="text-align: center;">Computer</h2>
                         <div>
-                            <input type="number" id="cfr" value="0">
+                            <input type="number" id="cfr" value="0" readonly>
                         </div>
                     </div>
                     
                 </div>
-                <div class="fr"></div>
+                <div class="fr"><h4 style="text-align: center;">Turns left:</h4>
+                <h3 id="tLeft"></h3>
+            </div>
             </div>
         </div>
     </main>
