--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
             </div>
             </div>
         </div>
+
+        <!-- <div>
+            <ul>
+                <li>Instructions:</li>
+                <li>If Rock and Paper appers then paper wins</li>
+                <li>If Paper and Scissor appers then Scissor wins</li>
+                <li>If Rock and Scissor appers then Rock wins</li>
+                <li>If Tie than both will be awarded with one point.</li>
+            </ul>
+        </div> -->
     </main>
     <script src="index.js"></script>
     <script>
