--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissor</title>
     <link rel="stylesheet" href="style.css">
+    <!-- link for fontawesome Icons  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -33,6 +35,10 @@
                     <button class="play" onclick="play1()">Rock</button>
                     <button class="play" onclick="play2()">Paper</button>
                     <button class="play" onclick="play3()">Scissor</button>
+
+                    <!-- <i class="far fa-hand-rock"></i>  for rock-->
+                    <!-- <i class="far fa-hand-paper"></i> For paper -->
+                    <!-- <i class="far fa-hand-scissors"></i>For scissor -->
                 </div>
             </div>
             <div class="box2">
