Icons added + background change

--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
                 <div><button onclick="rules()" class="rules">See Rules</button></div>
             </div>
         </div>
-
         <h1>Rock Paper Scissor</h1>
         <div class="box">
             <div class="box1">
                 <div class="icons">
-                    <button class="play" onclick="play1()">Rock</button>
-                    <button class="play" onclick="play2()">Paper</button>
-                    <button class="play" onclick="play3()">Scissor</button>
-
-                    <!-- <i class="far fa-hand-rock"></i>  for rock-->
-                    <!-- <i class="far fa-hand-paper"></i> For paper -->
-                    <!-- <i class="far fa-hand-scissors"></i>For scissor -->
+                    <div class="b1">
+                    <button class="play" onclick="play1()"><i class="far fa-hand-rock"></i></button>
+                </div>
+                <div class="b2">
+                    <button class="play" onclick="play2()"><i class="far fa-hand-paper"></i> </button>
+                    <button class="play" onclick="play3()"><i class="far fa-hand-scissors"></i></button> 
+                </div>   
                 </div>
             </div>
             <div class="box2">
