--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
             </div>
         </div>
     </main>
+    <!-- <footer>
+
+    </footer> -->
     <script src="index.js"></script>
     <script>
         function rules(){
